src/components/Nav/style.css
nav {
  position: absolute;
  width: calc(42.5vw + 24px);
  max-width: calc(68vh + 24px);
  margin: 20px 0;
  pointer-events: none;
}

.nav-left {
  left: 0;
}

.nav-right {
  right: 0;
}

nav > a, .tab-space {
  display: flex;
  height: calc(13.75vw - 10px);
  max-height: calc(22vh - 10px);
  transition: transform 1s ease-in-out;
}

.nav-right > a, .nav-right > .tab-space {
  flex-direction: row-reverse;
}

nav > a.active {
  position: relative;
  z-index: 2;
}

nav > a.left {
  transform-origin: right;
}

nav > a.left.active {
  transform: rotateY(180deg);
}

a.left.active > .nav-tab > .nav-text {
  transition-delay: 0.5s;
  transform: rotateY(180deg);
  margin-top: -1.5px;
}

nav > a.right {
  transform-origin: left;
}

nav > a.right.active {
  transform: rotateY(-180deg);
}

a.right.active > .nav-tab > .nav-text {
  transition-delay: 0.5s;
  transform: rotateY(-180deg);
  margin-top: -1.5px;
}

.nav-tab {
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 25px;
  border: 1px #a6d69f solid;
  overflow: hidden;
  pointer-events: all;
  background-color: #b4e8ac;
}

.nav-tab.left {
  border-top-left-radius: 15px;
  border-bottom-left-radius: 15px;
}

.nav-tab.right {
  border-top-right-radius: 15px;
  border-bottom-right-radius: 15px;
}

.nav-tab.left.current {
  transition-delay: 0.5s;
  transition-property: border-right;
  border-right: 1px #b4e8ac solid;
}

.nav-tab.right.current {
  border-left: 1px #b4e8ac solid;
}

.nav-tab.right.flipped {
  transition-delay: 0.5s;
  transition-property: border-left;
  border-left: 1px #a6d69f solid;
}

.nav-tab:focus {
  outline: none;
}

.nav-text {
  writing-mode: vertical-rl;
  text-orientation: upright;
  text-align: center;
  line-height: 12px;
  font-size: 1vw;
}

